--- a/src/App.css
+++ b/src/App.css
@@ -216,16 +216,24 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*--------------------------------------------------------------
 # Intro Section
 --------------------------------------------------------------*/
-
 #intro {
   width: 100%;
-  height: 100vh;
-
-  /* background: url(../img/committee_photo.jpg) top center; */
+  height: 100vh; /* Full height of the viewport */
   background-size: cover;
+  background-position: center center; /* Ensure the image is centered */
+  background-repeat: no-repeat;
   overflow: hidden;
   position: relative;
   background-image: url("./components/images/Committee.jpg");
+}
+
+@media (max-width: 768px) {
+  #intro {
+    min-height: 100vh; /* Allow the height to adjust based on the content */
+    background-size: cover; /* Ensure the image is fully visible */
+    background-position: center top; /* Adjust image position for mobile */
+    padding-bottom: 20px; /* Add some padding to avoid content being too close to the edges */
+  }
 }
 
 #intro:before {
@@ -1165,7 +1173,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (min-width: 768px) {
-
   #contact .contact-address,
   #contact .contact-phone,
   #contact .contact-email {
