--- a/src/App.css
+++ b/src/App.css
@@ -218,9 +218,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 #intro {
   width: 100%;
-  height: 100vh; /* Full height of the viewport */
+  height: 100vh;
+  /* Full height of the viewport */
   background-size: cover;
-  background-position: center center; /* Ensure the image is centered */
+  background-position: center center;
+  /* Ensure the image is centered */
   background-repeat: no-repeat;
   overflow: hidden;
   position: relative;
@@ -229,10 +231,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @media (max-width: 768px) {
   #intro {
-    min-height: 100vh; /* Allow the height to adjust based on the content */
-    background-size: cover; /* Ensure the image is fully visible */
-    background-position: center top; /* Adjust image position for mobile */
-    padding-bottom: 20px; /* Add some padding to avoid content being too close to the edges */
+    min-height: 100vh;
+    /* Allow the height to adjust based on the content */
+    background-size: cover;
+    /* Ensure the image is fully visible */
+    background-position: center top;
+    /* Adjust image position for mobile */
+    padding-bottom: 20px;
+    /* Add some padding to avoid content being too close to the edges */
   }
 }
 
@@ -1173,6 +1179,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (min-width: 768px) {
+
   #contact .contact-address,
   #contact .contact-phone,
   #contact .contact-email {
