--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -108,7 +108,7 @@
   color: rgba(202, 206, 221, 0.8);
   font-family: "Raleway", sans-serif;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 22px;
   outline: none;
 }
 
@@ -148,10 +148,8 @@
   border: 2px solid #f82249;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
-  margin-left: 8px;
-  margin-top: 2px;
   line-height: 1;
-  font-size: 13px;
+  font-size: 18px;
 }
 
 .nav-menu li.buy-tickets a:hover {
@@ -319,9 +317,9 @@ nav ul li a {
     width: 50%; /* Occupy half of the screen */
     height: 100%; /* Full height */
     background-color: rgba(6, 12, 34, 0.98); /* Match with navbar color */
-    padding: 20px;
+    /* padding: 10px; */
     flex-direction: column; /* Vertical layout */
-    gap: 20px;
+    gap: 10px;
     text-align: center;
     z-index: 1000;
     transition: all 0.3s ease;
@@ -329,6 +327,7 @@ nav ul li a {
 
   .nav-menu.open {
     display: flex; /* Show the nav list */
+    justify-content: space-evenly;
   }
 
   /* Show hamburger icon */
