--- a/src/components/Newsletter_Components/styles.css
+++ b/src/components/Newsletter_Components/styles.css
@@ -10,7 +10,8 @@
   background-image: url("../images/meetings-bg.jpg");
   background-size: cover;
   background-position: center;
-  min-height: 100vh; /* Ensure it takes up the full viewport height */
+  min-height: 100vh;
+  /* Ensure it takes up the full viewport height */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -158,13 +159,14 @@ img {
     background-image: url("../images/meetings-bg.jpg");
     background-size: cover;
     background-position: center;
-    min-height: 100vh; /* Ensure it takes up the full viewport height */
+    min-height: 100vh;
+    /* Ensure it takes up the full viewport height */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
+
 
   .cardd {
     /* 
